# django-core-template

./: README.md  pyproject.toml
app/core/: asgi.py  settings.py  urls.py  wsgi.py
app/main/: urls.py  views.py
