[tool.poetry]
name = "site-portfolio"
version = "0.1.0"
description = ""
authors = ["GonnaFlyMethod <alexandergusakov@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
django-environ = "^0.4.5"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
